--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </div>
           </span>
         </div> 
-        <div class="man">
+        <div class="man man-contact">
           <img src="assets/pose_45.png">
         </div>
       </div>
