--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <ul class="nav-menu">
             <li><a class="nav-link" href="#about me">ABOUT ME</a></li>
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="#">CONTACT</a></li>
+            <li><a class="nav-link" href="#contact">CONTACT</a></li>
             <!-- <li><a class="nav-link" href="#">BlOG</a></li> -->
             <li>
               <a
