--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@
     </footer>
     <script src="js/script.js"></script>
     <script src="js/player.js"></script>
+    <script src="js/typing.js"></script>
+
     <script>
       const skillsContainer = document.querySelector('.skills-container');
       const skills = document.querySelectorAll('.skill');
