--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="assets/display.png"
+      content="https://github.com/talibmohamed/talibmohamed.github.io/blob/main/assets/display.png"
     />
 
     <!-- Twitter -->
