--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/talibmohamed/talibmohamed.github.io/blob/main/assets/display.png"
+      content="https://drive.google.com/file/d/1jkwsk79xSIegrycdGus8dSBTOH6aLWqz/view"
     />
 
     <!-- Twitter -->
