--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://github.com/talibmohamed/mohamed.github.io"
+      content="https://medtalib.tech/"
     />
     <meta property="og:title" content="Mohamed personal portfolio" />
     <meta
@@ -25,14 +25,14 @@
     />
     <meta
       property="og:image"
-      content="https://drive.google.com/file/d/1jkwsk79xSIegrycdGus8dSBTOH6aLWqz/view"
+      content="assets/display.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://github.com/talibmohamed/mohamed.github.io"
+      content="https://medtalib.tech/"
     />
     <meta property="twitter:title" content="Mohamed personal portfolio" />
     <meta
