fixing bold text

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
           <span>
             <h4 id="ab-me">About Me</h4>
             <p class="text-1">
-              I hold a Bachelor's degree in Computer Science from <a href="http://www.usms.ac.ma/" target="_blank" style="font-weight: 600; color: #000000;">Sultan Moulay Slimane University</a> and will be commencing my engineering studies at <a href="https://www.isep.fr/" target="_blank" style="font-weight: 600; color: #000000;">ISEP Paris</a> this September. My academic background has equipped me with solid foundations in software development, and I am eager to further enhance my skills through practical experience.
+              I hold a Bachelor's degree in Computer Science from <a href="http://www.usms.ac.ma/" target="_blank" style="font-weight: 600;">Sultan Moulay Slimane University</a> and will be commencing my engineering studies at <a href="https://www.isep.fr/" target="_blank" style="font-weight: 600;">ISEP Paris</a> this September. My academic background has equipped me with solid foundations in software development, and I am eager to further enhance my skills through practical experience.
             </p>
             <p class="text-1">
-              I am currently seeking an <b>apprenticeship</b> contract in software development to apply my expertise in web and software development. My goal is to contribute to challenging projects while continuing to grow and evolve as a developer with a focus on user-centric solutions.
+              I am currently seeking an <span style="font-weight: 600;">apprenticeship</span> contract in software development to apply my expertise in web and software development. My goal is to contribute to challenging projects while continuing to grow and evolve as a developer with a focus on user-centric solutions.
             </p>
                        
           </span>
