--- a/index.html
+++ b/index.html
@@ -326,6 +326,19 @@
             </div>
           </div>
         </div>
+        <div href="" class="card">
+          <div class="project-info">
+            <div class="project-bio">
+              <h3>Library Management</h3>
+              <p>This project aims to create a web application to optimize housing management. The application will provide an interactive platform to visualize, track, and manage available housing, equipment, and monitor electricity and water quotas for each housing unit, among other things, both for the admin and the residants</p>
+              <h3>PHP, REACT, POSTGRES</h3>
+            </div>
+            <div class="project-link">
+              <a href="https://github.com/talibmohamed/gestion-logements" target="_blank"><i class="fab fa-github git-project"></i></a>
+              <a href="https://medtalib.tech" target="_blank"><i class="fas fa-globe"></i></a>
+            </div>
+          </div>
+        </div>
       
       </article>
 
