--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               </div>
               <div class="social-me phone">
                 <img class="phone" src="assets/icons8-phone.svg" ></img>
-                <a class="phone-text" href="tel:+212621404218">+212 621404218</a>
+                <a class="phone-text" href="tel:+33619356837">+33 619 35 6837</a>
               </div>
             </div>
           </span>
