--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>Mohamed</title>
+    <title>Mohamed TALIB</title>
     <meta name="title" content="Mohamed personal portfolio" />
     <meta
       name="description"
